--- a/style.css
+++ b/style.css
@@ -34,8 +34,22 @@
   border: 1px solid red;
   grid-column: 1 / 3;
   grid-row: 1 / 4;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto 1fr 1fr 1fr;
+  gap: 15px;
+  padding: 15px;
+}
+
+.projects-title {
+  grid-column: 1 / -1;
+  grid-row: 1;
 }
 
 .project {
   border: 1px solid green;
+}
+
+.trending {
+  border: 1px solid pink;
 }
