--- a/style.css
+++ b/style.css
@@ -4,13 +4,11 @@
 }
 
 .container {
-  width: 100%;
+  height: 100vh;
   max-width: 57vw;
-  max-height: 100vw;
-  overflow-y: auto;
   margin: 0 auto;
   display: grid;
-  grid-template-rows: 1fr 4fr;
+  grid-template-rows: auto 1fr auto;
   grid-template-columns: 1fr 4fr;
   grid-auto-flow: row;
 }
@@ -29,6 +27,8 @@
 }
 
 .mainContent {
+  background-color: rgb(216, 214, 214);
+
   border: 1px solid black;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -44,6 +44,8 @@
   grid-template-rows: auto 1fr 1fr 1fr;
   gap: 15px;
   padding: 15px;
+  background-color: rgb(216, 214, 214);
+  margin-bottom: 8vh;
 }
 
 .projects-title {
@@ -57,4 +59,10 @@
 
 .trending {
   border: 1px solid pink;
+}
+
+.sideBar {
+  background-color: rgb(216, 214, 214);
+  grid-row: 1 / 4;
+  margin-bottom: 8vh;
 }
