--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@
 
 .container {
   height: 100vh;
-  max-width: 57vw;
   margin: 0 auto;
   display: grid;
   grid-template-rows: auto 1fr auto;
@@ -17,6 +16,27 @@
   grid-column: 2 / 5;
   grid-row: 1 / 2;
   border: 1px solid black;
+  display: grid;
+  grid-template-rows: 0.5fr 0.5fr;
+  padding: 20px;
+}
+
+.searchBar {
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  grid-row: 1 / 2;
+}
+
+.identity {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-auto-flow: column;
+  grid-row: 1 / 2;
+}
+
+.buttons {
+  place-self: center;
+  border: 1px solid black;
 }
 
 .sidebar {
@@ -24,6 +44,7 @@
   grid-column: 1 / 2;
   grid-row: 1 / 3;
   background-color: lightblue;
+  padding: 20px;
 }
 
 .mainContent {
@@ -36,21 +57,21 @@
 }
 
 .projects {
-  border: 1px solid red;
   grid-column: 1 / 3;
   grid-row: 1 / 4;
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: auto 1fr 1fr 1fr;
-  gap: 15px;
-  padding: 15px;
+  gap: 20px;
   background-color: rgb(216, 214, 214);
-  margin-bottom: 8vh;
+  margin-bottom: 4vh;
+  padding: 20px;
 }
 
 .projects-title {
   grid-column: 1 / -1;
   grid-row: 1;
+  font-size: 16px;
 }
 
 .project {
@@ -58,11 +79,31 @@
 }
 
 .trending {
-  border: 1px solid pink;
 }
 
 .sideBar {
   background-color: rgb(216, 214, 214);
   grid-row: 1 / 4;
-  margin-bottom: 8vh;
+  margin-bottom: 4vh;
+  display: grid;
+  padding: 20px;
+  width: 80%;
+}
+
+.card,
+.profile {
+  border: 1px solid white;
+}
+
+.announcements {
+  display: grid;
+  grid-template-rows: auto 1fr;
+  gap: 20px;
+}
+
+.trending {
+  display: grid;
+  grid-template-rows: auto 1fr;
+  gap: 20px;
+  padding-top: 10px;
 }
