--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
   border: 1px solid black;
   display: grid;
   grid-template-rows: 0.5fr 0.5fr;
-  padding: 20px;
+  padding: 20px 20px 0 20px;
 }
 
 .searchBar {
@@ -29,17 +29,25 @@
 
 .identity {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 0fr 1fr;
+  justify-self: center;
+  width: 50%;
   grid-auto-flow: column;
   grid-row: 1 / 2;
 }
 
 .buttons {
-  place-self: center;
+  display: grid;
+  grid-auto-flow: column;
+  align-self: self-end;
   border: 1px solid black;
 }
 
-.sidebar {
+button {
+  width: 50%;
+}
+
+.leftSideBar {
   border: 1px solid black;
   grid-column: 1 / 2;
   grid-row: 1 / 3;
@@ -49,24 +57,21 @@
 
 .dashboard {
   display: grid;
-  grid-template-columns: 1fr 4fr;
+  grid-template-columns: 1fr 5fr;
   grid-template-rows: 1fr 1fr 1fr;
-  background-color: rgb(216, 214, 214);
   margin-bottom: 4vh;
 }
 
 .firstHalf {
   display: grid;
-  grid-template-columns: 1fr 4fr;
-  background-color: rgb(216, 214, 214);
+  grid-template-columns: 1fr 5fr;
   margin-bottom: 4vh;
   row-gap: 10px;
 }
 
 .secondHalf {
   display: grid;
-  grid-template-columns: 1fr 4fr;
-  background-color: rgb(216, 214, 214);
+  grid-template-columns: 1fr 5fr;
   margin-bottom: 4vh;
   row-gap: 10px;
 }
@@ -105,7 +110,7 @@
 .trending {
 }
 
-.sideBar {
+.rightSideBar {
   background-color: rgb(216, 214, 214);
   grid-row: 1 / 4;
   margin-bottom: 4vh;
@@ -114,8 +119,17 @@
   width: 80%;
 }
 
+.companylogo {
+  width: 70%;
+}
+
 .logo {
-  width: 17px;
+  width: 21px;
+}
+
+.card {
+  display: grid;
+  padding: 13px;
 }
 
 .card,
@@ -130,6 +144,7 @@
 }
 
 .trending {
+  border: 1px solid white;
   display: grid;
   grid-template-rows: auto 1fr;
   gap: 20px;
