--- a/style.css
+++ b/style.css
@@ -17,16 +17,18 @@
 .header {
   grid-column: 2 / 5;
   grid-row: 1 / 2;
-  border: 1px solid black;
   display: grid;
   grid-template-rows: 0.5fr 0.5fr;
   padding: 20px 20px 0 20px;
+  padding: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .searchBar {
   display: grid;
-  grid-template-columns: 1fr 6fr;
+  grid-template-columns: 1.5fr 17fr;
   grid-row: 1 / 2;
+  padding-left: 10px;
 }
 
 .identity {
@@ -42,7 +44,34 @@
   display: grid;
   grid-auto-flow: column;
   align-self: self-end;
-  border: 1px solid black;
+  grid-template-columns: 1fr auto auto 1fr;
+  justify-content: end;
+  gap: 5%;
+}
+
+.buttons button {
+  min-width: max-content;
+  padding: 8px 24px;
+  width: auto;
+  background-color: lightblue;
+  border: none;
+  border-radius: 1em;
+  color: black;
+  font-size: 14px;
+}
+
+.buttons .share {
+  max-width: fit-content;
+}
+
+.buttons .new {
+  grid-column: 2;
+}
+.buttons .upload {
+  grid-column: 3;
+}
+.buttons .share {
+  grid-column: 4;
 }
 
 button,
@@ -56,14 +85,20 @@ button,
   border: none;
 }
 
+.searchButton {
+  background-color: white;
+}
+
 input {
   border-radius: 1em;
-  background-color: lightgray;
+  background-color: rgb(216, 214, 214);
   border-style: none;
+  padding: 5px;
 }
 
 .leftSideBar {
-  border: 1px solid black;
+  padding: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   grid-column: 1 / 2;
   grid-row: 1 / 3;
   background-color: lightblue;
@@ -121,7 +156,7 @@ input {
 
 .firstHalf a:hover,
 .secondHalf a:hover {
-  color: lightgray;
+  color: coral;
   text-decoration: underline;
 }
 
@@ -135,7 +170,8 @@ input {
 .mainContent {
   background-color: rgb(216, 214, 214);
 
-  border: 1px solid black;
+  padding: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
@@ -159,8 +195,16 @@ input {
   font-size: 16px;
 }
 
+.project > .title {
+  font-weight: 700;
+}
+
 .project {
-  border: 1px solid green;
+  background-color: white;
+  border-radius: 1em;
+  padding: 20px 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  border-left: 8px solid coral;
 }
 
 .rightSideBar {
@@ -201,7 +245,6 @@ input {
   background-color: white;
   border-radius: 1em;
   padding: 10px;
-
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
@@ -210,6 +253,10 @@ input {
   grid-template: 1fr;
   gap: 1px;
   background-color: #ccc;
+}
+
+.card-inner p {
+  font-weight: bold;
 }
 
 .card p {
