--- a/style.css
+++ b/style.css
@@ -20,7 +20,6 @@
   display: grid;
   grid-template-rows: 0.5fr 0.5fr;
   padding: 20px 20px 0 20px;
-  padding: 10px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
@@ -29,6 +28,10 @@
   grid-template-columns: 1.5fr 17fr;
   grid-row: 1 / 2;
   padding-left: 10px;
+}
+
+.welcome {
+  padding-left: 20px;
 }
 
 .identity {
@@ -195,8 +198,9 @@ input {
   font-size: 16px;
 }
 
-.project > .title {
+.project .title {
   font-weight: 700;
+  padding-bottom: 10px;
 }
 
 .project {
@@ -205,6 +209,52 @@ input {
   padding: 20px 10px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   border-left: 8px solid coral;
+  transition: all 0.3s ease;
+  position: relative;
+  overflow: hidden;
+  color: inherit;
+  text-decoration: none;
+}
+
+.project a {
+  display: block;
+  width: 100%;
+  height: 100%;
+  text-decoration: none;
+  color: inherit;
+}
+
+.project::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-size: cover;
+  background-position: center;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.project:hover::before {
+  opacity: 1;
+}
+
+.project:hover > * {
+  opacity: 0;
+  transform: translateY(-5px);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+}
+
+.project1::before {
+  background-image: url("projectpics/project1.png");
+  src: "https://abigjuicyburger.github.io/odin-recipes/";
+  cursor: pointer;
+}
+
+.project2::before {
+  background-image: url("projectpics/project2.png");
 }
 
 .rightSideBar {
