--- a/style.css
+++ b/style.css
@@ -15,11 +15,12 @@
 }
 
 .header {
+  grid-template-columns: 2fr 1fr;
   grid-column: 2 / 5;
   grid-row: 1 / 2;
   display: grid;
   grid-template-rows: 0.5fr 0.5fr;
-  padding: 20px 20px 0 20px;
+  padding: 20px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
@@ -30,17 +31,24 @@
   padding-left: 10px;
 }
 
+.searchBar input {
+  align-self: center;
+  height: 50%;
+}
+
 .welcome {
-  padding-left: 20px;
+  padding: 20px 20px 0 20px;
+  display: grid;
+  grid-template-columns: 1fr 8fr;
 }
 
 .identity {
   display: grid;
-  grid-template-columns: 1fr 0fr 1fr;
+  grid-template-columns: repeat(3, 1fr);
   justify-self: center;
-  width: 50%;
   grid-auto-flow: column;
   grid-row: 1 / 2;
+  align-items: center;
 }
 
 .buttons {
@@ -63,6 +71,10 @@
   font-size: 14px;
 }
 
+.buttons button:hover {
+  background-color: coral;
+}
+
 .buttons .share {
   max-width: fit-content;
 }
@@ -83,7 +95,8 @@ button,
   cursor: pointer;
 }
 
-.searchButton {
+.searchButton,
+.bell {
   cursor: pointer;
   border: none;
 }
@@ -328,8 +341,9 @@ input {
   font-weight: 800;
 }
 
-.profile-info {
- 
+img {
+  width: 35px;
+  object-fit: cover;
 }
 
 .picture {
@@ -363,7 +377,9 @@ input {
   background-color: #ccc;
 }
 
-.card-inner p {
+.card-inner p,
+.welcome p,
+.identity p {
   font-weight: bold;
 }
 
