changed font family

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: "Baskerville, Times New ROman, serif";
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   --card-color: white;
 }
 
