--- a/style.css
+++ b/style.css
@@ -5,8 +5,13 @@
   --card-color: white;
 }
 
+body {
+  overflow-x: hidden
+}
+
 .container {
   height: 100vh;
+  width: 100%;
   margin: 0 auto;
   display: grid;
   grid-template-rows: auto 1fr auto;
@@ -286,6 +291,10 @@ input {
   background-image: url("projectpics/project6.png");
 }
 
+.project7::before {
+  background-image: url("projectpics/project7.png");
+}
+
 .ocean-text {
   background: linear-gradient(45deg, #0c3247, #9cb3be, #0077be);
   background-size: 200% 200%;
@@ -395,7 +404,107 @@ img {
   grid-column: 1 / 3;
 }
 
-/* .card,
-.profile {
-  padding: 10px;
-} */
+/* Small Screens */
+@media only screen and (max-width: 600px) {
+  .container {
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto 1fr auto;
+  }
+
+  .header {
+    grid-column: 1;
+    grid-row: 1;
+    grid-template-rows: auto auto auto auto;
+    grid-template-columns: 1fr;
+    padding: 10px;
+  }
+
+ .welcome {
+  grid-row: 3;
+  grid-column: 1;
+ }
+
+ .buttons {
+  grid-row: 4;
+  grid-column: 1;
+ }
+
+  .header .searchBar,
+  .header .identity,
+  .header .welcome,
+  .header .buttons {
+    font-size: 0.9em;
+  }
+
+  .mainContent {
+    grid-column: 1;
+    grid-row: 3;
+    width: 100%;
+    padding: 0px;
+  }
+
+  .projects {
+    grid-column: 1 / -1;
+  }
+
+  .rightSideBar {
+    display: none;
+  }
+
+ .leftSideBar {
+  grid-column: 1;
+    grid-row: 4;
+    display: grid;
+    align-items: center;
+    padding: 5px;
+ }
+
+ .dashboard, .secondHalf {
+  display: none;
+}
+
+.firstHalf {
+  grid-column: 1 / -1;
+  align-items: center;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  justify-items: center;
+}
+
+.firstHalf .logo {
+  width: 25px;
+  height: 25px;
+}
+
+.buttons button {
+  padding: 6px 18px;
+  font-size: 12px;
+}
+
+.firstHalf .logo:nth-child(n+7),
+  .firstHalf a,
+  .secondHalf {
+    display: none;
+  }
+
+.searchBar, .identity, .rightSideBar {
+  display: none;
+}
+
+
+.firstHalf .logo:nth-child(n+3):not(:nth-child(-n+6)) {
+  display: none;
+}
+
+.firstHalf .logo,
+.firstHalf a {
+  display: none;
+}
+
+.firstHalf .logo[src="icons/githublogo.svg"],
+.firstHalf a[href="https://github.com/ABigJuicyBurger"] {
+  display: block;
+}
+}
+
+
