--- a/style.css
+++ b/style.css
@@ -158,7 +158,6 @@ input {
 }
 
 .leftSideBar {
-  padding: 10px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   grid-column: 1 / 2;
   grid-row: 1 / 3;
@@ -395,6 +394,7 @@ body.dark .projects {
 .project-page {
   display: grid;
   min-height: 400px;
+  grid-template-columns: 1fr 1fr 1fr;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 20px;
   transition: transform 0.5s ease-in-out;
